<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_divider"
    android:orientation="vertical">


    <include layout="@layout/title_bar"/>
    <LinearLayout
        android:id="@+id/ll_self_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/y40"
        android:paddingLeft="@dimen/x48"
        android:background="@android:color/white"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/iv_headImage"
            android:layout_marginTop="@dimen/y15"
            android:layout_marginBottom="@dimen/y15"
            android:layout_width="@dimen/x200"
            android:layout_height="@dimen/y200"
            android:scaleType="centerCrop"
            android:src="@mipmap/happy_face"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/x50"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_userName"
                android:textSize="@dimen/x48"
                android:textColor="@color/Estate_Service_text"
                android:text="瞿超伟"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tv_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/x36"
                android:layout_marginTop="@dimen/y15"
                android:text="@string/phone_number"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/y40"
        android:paddingLeft="@dimen/x48"
        android:paddingRight="@dimen/x36"
        android:background="@android:color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_my_cars"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y160"
            android:drawableLeft="@mipmap/car"
            android:drawablePadding="@dimen/x30"
            android:drawableRight="@mipmap/arrow_right_grey"
            android:gravity="center_vertical"
            android:paddingRight="@dimen/x30"
            android:text="@string/my_cars"
            android:textColor="@color/Estate_Service_text"
            android:textSize="@dimen/x48" />
        <TextView
            android:id="@+id/tv_my_repair"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y160"
            android:drawableLeft="@mipmap/repair"
            android:drawablePadding="@dimen/x30"
            android:drawableRight="@mipmap/arrow_right_grey"
            android:gravity="center_vertical"
            android:paddingRight="@dimen/x30"
            android:text="@string/my_repair"
            android:textColor="@color/Estate_Service_text"
            android:textSize="@dimen/x48" />
        <TextView
            android:id="@+id/tv_about_us"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y160"
            android:drawableLeft="@mipmap/happy_face"
            android:drawablePadding="@dimen/x30"
            android:drawableRight="@mipmap/arrow_right_grey"
            android:gravity="center_vertical"
            android:paddingRight="@dimen/x30"
            android:text="@string/about_us"
            android:textColor="@color/Estate_Service_text"
            android:textSize="@dimen/x48" />
        <TextView
            android:id="@+id/tv_exit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y120"

            android:layout_marginTop="@dimen/y20"
            android:gravity="center"
            android:paddingRight="@dimen/x30"
            android:layout_marginRight="@dimen/x50"
            android:text="退出登录"
            android:layout_marginBottom="@dimen/y20"
            android:background="@drawable/bg_btn_red"
            android:textColor="@android:color/white"
            android:textSize="@dimen/x48" />
    </LinearLayout>
    
   
</LinearLayout>