<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_divider"
    android:orientation="vertical">

    <include layout="@layout/title_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x48"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:paddingLeft="@dimen/x36"
        android:paddingRight="@dimen/x36">

        <RelativeLayout
            android:id="@+id/rl_headImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/y20"
            android:paddingTop="@dimen/y20">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/head_image"
                android:textColor="@android:color/black"
                android:textSize="@dimen/x48" />

            <ImageView
                android:id="@+id/iv_headImage"
                android:layout_width="@dimen/x200"
                android:layout_height="@dimen/y200"
                android:layout_alignParentRight="true"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_launcher" />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/_888888" />

        <RelativeLayout
            android:id="@+id/rl_nick_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/y40"
            android:layout_marginTop="@dimen/y40">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/nick_name"
                android:textColor="@android:color/black"
                android:textSize="@dimen/x48" />

            <TextView
                android:id="@+id/tv_nick_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:textSize="@dimen/x42" />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/_888888" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/y40"
            android:layout_marginTop="@dimen/y40">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/phone_number"
                android:textColor="@android:color/black"
                android:textSize="@dimen/x48" />

            <TextView
                android:id="@+id/tv_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/phone_number"
                android:textSize="@dimen/x42" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/_888888" />

        <RelativeLayout
            android:id="@+id/rl_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/y40"
            android:layout_marginTop="@dimen/y40">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/address"
                android:textColor="@android:color/black"
                android:textSize="@dimen/x48" />
            <TextView
                android:id="@+id/tv_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/address"
                android:layout_alignParentRight="true"

                android:textSize="@dimen/x48" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/x48"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:paddingLeft="@dimen/x36"
        android:paddingRight="@dimen/x36">

        <RelativeLayout
            android:id="@+id/rl_sex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/y40"
            android:layout_marginTop="@dimen/y40">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/sex"
                android:textColor="@android:color/black"
                android:textSize="@dimen/x48" />

            <TextView
                android:id="@+id/tv_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:textSize="@dimen/x42" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/_888888" />

        <RelativeLayout
            android:id="@+id/rl_signature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/y40"
            android:layout_marginTop="@dimen/y40">

            <TextView
                android:id="@+id/tv_signatures"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/signature"
                android:textColor="@android:color/black"
                android:textSize="@dimen/x48" />

            <TextView
                android:id="@+id/tv_signature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/tv_signatures"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:ellipsize="end"
                android:maxLines="1"
                android:textSize="@dimen/x42" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>