<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.quchwe.cms.myinfo.RepairInfoActivity">

    <include layout="@layout/title_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:orientation="vertical"
                android:paddingLeft="@dimen/x45">



                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/login_divider" />

                <RelativeLayout
                    android:id="@+id/rl_car_id"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/y156"
                    android:layout_marginRight="@dimen/x30"
                    android:layout_marginTop="@dimen/y30"
                    >

                    <TextView
                        android:id="@+id/tv_car_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:text="@string/drivingLicenseId"
                        android:textColor="@color/hint_text"
                        android:textSize="16dp" />

                    <EditText
                        android:id="@+id/et_car_id"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/y156"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/x10"
                        android:layout_toRightOf="@+id/tv_car_id"
                        android:background="@null"
                        android:enabled="false"
                        android:inputType="phone"
                        android:maxLength="11"
                        android:textColor="@android:color/black" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/login_divider" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/y156"

                    android:layout_marginRight="@dimen/x30"
                    android:layout_marginTop="@dimen/y30">

                    <TextView
                        android:id="@+id/tv_phone_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:text="@string/accident_type"
                        android:textColor="@color/hint_text"
                        android:textSize="16dp" />

                    <EditText
                        android:id="@+id/et_accidentType"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/y156"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/x10"
                        android:layout_toRightOf="@+id/tv_phone_number"
                        android:background="@null"
                        android:enabled="false"

                        android:maxLength="11"
                        android:textColor="@android:color/black" />
                </RelativeLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/login_divider" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/y156"
                    android:layout_marginRight="@dimen/x30"
                    android:layout_marginTop="@dimen/y30">

                    <TextView
                        android:id="@+id/tv_password_again"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:text="@string/create_time"
                        android:textColor="@color/hint_text"
                        android:textSize="16dp" />

                    <EditText
                        android:id="@+id/et_create_time"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/x10"
                        android:layout_toRightOf="@+id/tv_password_again"
                        android:background="@null"
                        android:enabled="false"

                        android:maxLength="16"
                        android:textColor="@android:color/black" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/login_divider" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/y156"
                    android:layout_marginRight="@dimen/x30"
                    android:layout_marginTop="@dimen/y30">

                    <TextView
                        android:id="@+id/tv_miles"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:text="@string/progress"
                        android:textColor="@color/hint_text"
                        android:textSize="16dp" />

                    <EditText
                        android:id="@+id/et_progress"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/x10"
                        android:layout_toRightOf="@+id/tv_miles"
                        android:background="@null"
                        android:enabled="false"

                        android:maxLength="16"
                        android:textColor="@android:color/black" />
                </RelativeLayout>







                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/login_divider" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/y156"
                    android:layout_marginRight="@dimen/x30"
                    android:layout_marginTop="@dimen/y30">

                    <TextView
                        android:id="@+id/tv_desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:text="@string/description"
                        android:textColor="@color/hint_text"
                        android:textSize="16dp" />

                    <EditText
                        android:id="@+id/et_desc"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginLeft="@dimen/x50"
                        android:layout_toRightOf="@+id/tv_desc"
                        android:background="@null"
                        android:enabled="false"

                        android:textColor="@android:color/black" />
                </RelativeLayout>

            </LinearLayout>


            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_images"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </android.support.v7.widget.RecyclerView>
        </LinearLayout>

    </ScrollView>
</LinearLayout>
